closes #1480 closes #1494 closes #1505

--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/HubPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/HubPage.xaml
@@ -263,8 +263,8 @@
 
         <StackPanel Grid.Row="1">
             <StackPanel>
-                <TextBlock>Updating:</TextBlock>
-                <ProgressBar IsIndeterminate="True"></ProgressBar>
+                <!--TextBlock>Updating:</>
+                <ProgressBar IsIndeterminate="True"></ProgressBar-->
 
                 <Frame Name="SubPage" />
             </StackPanel>
