--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
@@ -1,13 +1,49 @@
 ﻿<Page
-    x:Class="com.dkhalife.apps.redmine.UWP.Issues"
+    x:Class="com.dkhalife.apps.redmine.UWP.IssuesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:com.dkhalife.apps.redmine.UWP"
+    xmlns:r="using:com.dkhalife.apps.redmine"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <ListView ItemsSource="{x:Bind Path=Issues.Values}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="r:Issue">
+                    <StackPanel Margin="0,5,0,5">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontFamily="Segoe MDL2 Assets" Margin="0,3,10,0" Text="&#xEDB0;" Foreground="{x:Bind Priority.Color}"></TextBlock>
 
+                            <TextBlock Text="{x:Bind Path=Tracker.Name, Mode=OneWay}"/>
+
+                            <TextBlock Text="{x:Bind Path=Subject, Mode=OneWay}"/>
+                        </StackPanel>
+
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                                <ColumnDefinition></ColumnDefinition>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0" Text="{x:Bind Path=Status.Name, Mode=OneWay}"/>
+                            <ProgressBar Grid.Column="1" Margin="20,0,20,0" Value="{x:Bind DoneRatio}" />
+                            <StackPanel Grid.Column="2" Orientation="Horizontal">
+                                <TextBlock FontFamily="Segoe MDL2 Assets" Margin="0,3,10,0" Text="&#xE2AF;"></TextBlock>
+                                <TextBlock Text="{x:Bind Path=AssignedTo.Name, Mode=OneWay}"/>
+                            </StackPanel>
+                        </Grid>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
