--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
@@ -1,35 +1,34 @@
 ﻿<Page
-    x:Class="com.dkhalife.apps.redmine.UWP.Users"
+    x:Class="com.dkhalife.apps.redmine.UWP.UsersPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:r="using:com.dkhalife.apps.redmine"
     xmlns:local="using:com.dkhalife.apps.redmine.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Page.Resources>
-        <CollectionViewSource
-            x:Name="UsersList"
-            Source="{Binding Authors}"
-            IsSourceGrouped="true"/>
-
-        <DataTemplate x:Key="ZoomedOutAuthorTemplate">
-            <Border Margin="9.6,0.8" Background="{Binding Converter={StaticResource JumpListItemBackgroundConverter}}">
-                <TextBlock Margin="9.6,0,9.6,4.8" Text="{Binding Group.Name}" Style="{StaticResource SubtitleTextBlockStyle}"
-            Foreground="{Binding Converter={StaticResource JumpListItemForegroundConverter}}" VerticalAlignment="Bottom"/>
-            </Border>
-        </DataTemplate>
-
-        <Style x:Key="AuthorGroupHeaderContainerStyle" TargetType="ListViewHeaderItem">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        </Style>
-
-        <Style x:Key="ZoomedOutAuthorItemContainerStyle" TargetType="ListViewItem">
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-        </Style>
-    </Page.Resources>
-
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        
+        <ListView ItemsSource="{x:Bind Path=Users.Values}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                </Style>
+            </ListView.ItemContainerStyle>
+
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="r:User">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Text="{x:Bind Path=FullName, Mode=OneWay}"/>
+                        <SymbolIcon Grid.Column="1" Symbol="ContactInfo" HorizontalAlignment="Right" Tapped="OpenContactCard" />
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
