Issues layout Fixed load settings stupid typo

--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/IssuesPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView ItemsSource="{x:Bind Path=Issues.Values}" SelectionChanged="OpenIssue">
+        <ListView ItemsSource="{x:Bind Path=Issues.Values}" SelectionChanged="OpenIssue" HorizontalContentAlignment="Stretch">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
@@ -18,30 +18,38 @@
             
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="r:Issue">
-                    <StackPanel Margin="0,5,0,5">
+                    <Grid Margin="0,10,0,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontFamily="Segoe MDL2 Assets" Margin="0,3,10,0" Text="&#xEDB0;" Foreground="{x:Bind Priority.Color}"></TextBlock>
-
-                            <TextBlock Text="{x:Bind Path=Tracker.Name, Mode=OneWay}"/>
-
+                            <TextBlock Text="{x:Bind Path=Id}" Margin="0,0,10,0"/>
                             <TextBlock Text="{x:Bind Path=Subject, Mode=OneWay}"/>
                         </StackPanel>
 
-                        <Grid>
+                        <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition></ColumnDefinition>
                                 <ColumnDefinition></ColumnDefinition>
                                 <ColumnDefinition></ColumnDefinition>
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Grid.Column="0" Text="{x:Bind Path=Status.Name, Mode=OneWay}"/>
-                            <ProgressBar Grid.Column="1" Margin="20,0,20,0" Value="{x:Bind DoneRatio}" />
-                            <StackPanel Grid.Column="2" Orientation="Horizontal">
+                            <StackPanel Grid.Column="0" Orientation="Horizontal">
+                                <TextBlock Text="{x:Bind Path=Tracker.Name, Mode=OneWay}"/>
+                                <TextBlock Grid.Column="0" Margin="10,0,0,0" Text="{x:Bind Path=Status.Name, Mode=OneWay}"/>
+                            </StackPanel>
+                            
+                            <ProgressBar Grid.Column="1" Margin="20,0,20,0" Value="{x:Bind DoneRatio}" MaxWidth="80" />
+                            
+                            <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
                                 <TextBlock FontFamily="Segoe MDL2 Assets" Margin="0,3,10,0" Text="&#xE2AF;"></TextBlock>
                                 <TextBlock Text="{x:Bind Path=AssignedTo.Name, Mode=OneWay}"/>
                             </StackPanel>
                         </Grid>
-                    </StackPanel>
+                    </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
