--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/UsersPage.xaml
@@ -9,7 +9,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView ItemsSource="{x:Bind Path=Users.Values}">
+        <ListView ItemsSource="{x:Bind Path=Users.Values}" Name="Contacts" SelectionChanged="OpenIssuesForUser">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
