Queries tap event

--- a/Redmine.UWP/com/dkhalife/apps/redmine/uwp/QueriesPage.xaml
+++ b/Redmine.UWP/com/dkhalife/apps/redmine/uwp/QueriesPage.xaml
@@ -14,7 +14,7 @@
             <PivotItem Header="Global" />
         </Pivot>
 
-        <ListView ItemsSource="{x:Bind Path=Queries.Values}">
+        <ListView ItemsSource="{x:Bind Path=Queries.Values}" Name="QueriesList" SelectionChanged="OpenIssuesForQuery">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
